feat: MD 파일을 컨트롤러 패키지 구조에 따른 디렉토리로 분리 저장
단일 combined 파일 대신 각 컨트롤러의 패키지 경로를 그대로 반영해
{jar명}/{com/example/web/UserController}.md 형태로 저장한다.

https://claude.ai/code/session_01GsmagP8iigFFyeyLdGszP2